fixes mixed propagate and no propagate on single service interface exported multiple times by different instances